# ros2-vicon-receiver

vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: publisher.hpp
vicon_receiver/launch/: client.launch.py
vicon_receiver/msg/: Position.msg
vicon_receiver/src/vicon_receiver/: communicator.cpp  publisher.cpp
